feat: update docker, jwt, oauth2, roles...